Fixed alignment issues,added new sponsors,minor color tweaks

--- a/src/components/Main-page/about.css
+++ b/src/components/Main-page/about.css
@@ -166,18 +166,51 @@ h1 {
   }
 }
 
-
-.flex{
+.flex {
   margin-top: 4em;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
   gap: 10em;
-  /* animation: mover 1s infinite alternate ; */
 }
 
-.card{
+@media (max-width: 480px) {
+  #workshop {
+    width: 90%;
+    margin: auto;
+  }
+  #workshop .card {
+    height: 35em;
+  }
+  .content h3 {
+    font-size: medium;
+  }
+  .content p {
+    text-align: left;
+    font-size: medium;
+  }
+
+  .card-button {
+    width: 50%;
+    height: 50%;
+    margin: auto;
+    font-size: medium;
+  }
+  #sponsors .flex {
+    margin-top: 8em;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    gap: 2em;
+  }
+  .iframe{
+    margin: 0%;
+
+  }
+}
+.card {
   border: 0px;
   border-radius: 10px;
   /* background: #BDD1DB; */
@@ -186,47 +219,46 @@ h1 {
   position: relative;
   cursor: pointer;
   overflow: hidden;
-  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;;
-  transition: .3s linear;
+  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+  transition: 0.3s linear;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-
-.card::after{
-  content: '';
-  background-color: rgba(50, 13, 136,0.6);
+.card::after {
+  content: "";
+  background-color: rgba(50, 13, 136, 0.9);
   height: 100%;
   width: 100%;
   position: absolute;
   top: 137%;
   transform: translateY(-50%);
   cursor: pointer;
-  transition: .3s ease-in-out .35s;  
+  transition: 0.3s ease-in-out 0.35s;
 }
 
-.content{
+.content {
   color: white;
   position: absolute;
   top: 88%;
   padding: 0 30px;
-  transition: .5s cubic-bezier(.33,.99,.61,1.26) .55s;
+  transition: 0.5s cubic-bezier(0.33, 0.99, 0.61, 1.26) 0.55s;
   z-index: 1;
   width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  overflow-y:sc;
+  overflow-y: sc;
 }
 
-.content h3{
+.content h3 {
   margin-bottom: 2em;
   align-self: start;
 }
 
-button{
+button {
   padding: 10px 35px;
   border-radius: 20px;
   border: 0;
@@ -234,40 +266,38 @@ button{
   font-size: 1.5em;
   position: relative;
   z-index: 1;
-  transition: .3s linear;
+  transition: 0.3s linear;
   overflow: hidden;
   background-color: #121930e7;
   cursor: pointer;
 }
 
-button::after{
-  content: '';
+button::after {
+  content: "";
   width: 100%;
   height: 100%;
   clip-path: circle(0.5% at 0 0);
   position: absolute;
   left: 50%;
   top: 50%;
-  transform: translate(-50%,-50%);
+  transform: translate(-50%, -50%);
   z-index: -1;
-  transition: .3s linear;
+  transition: 0.3s linear;
 }
 
-
-.card:hover .content{
-  top: 10%;
- 
+.card:hover .content {
+  top: 5%;
 }
 
-.card:hover::after{
+.card:hover::after {
   top: 50%;
 }
 
-.card:hover .content::after{
+.card:hover .content::after {
   width: 80%;
 }
 
-.card-button:hover{
+.card-button:hover {
   color: white;
   background-color: #3e4042;
 }
